--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "author": "Ivan Koshelev",
   "license": "MIT",
-  "dependencies": {   
+  "dependencies": {
     "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
     "@types/chai": "^4.1.2",
     "@types/mocha": "^2.2.48",
+    "@types/node": "^9.4.7",
+    "chai": "^4.1.2",
     "es6-promise": "^4.2.4",
     "mocha": "^5.0.4",
     "tslint": "^5.9.1",
