--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "async-execution-tracking",
-  "version": "0.0.8",
+  "version": "0.3.0",
   "description": "Decorator to track execution of async methods and simplify early cancelation",
   "main": "./lib/src/index.js",
   "types": "./lib/src/index.d.ts",
+  "keywords": ["async","track","execution-tracking"],
   "scripts": {
     "test": "mocha ./lib/test/**/*.js -w",
+    "test-debug": "mocha ./lib/test/**/*.js -w --inspect-brk",
     "lint": "tslint \" src/**/*.ts*\""
   },
   "author": "Ivan Koshelev",
   "license": "MIT",
-  "repository" :
-  {
-    "type" : "git",
-    "url" : "https://github.com/IKoshelev/async-execution-tracking"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/IKoshelev/async-execution-tracking"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.12"
@@ -24,6 +25,7 @@
     "@types/node": "^9.4.7",
     "chai": "^4.1.2",
     "es6-promise": "^4.2.4",
+    "mobx-command": "^0.4.0",
     "mocha": "^5.0.4",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2"
